--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
         <item>Meowdy.</item>
         <item>The magic was in you all along, you just need to work it out! Meow.</item>
         <item>You need a fit body to perform the best magic. Believe me, I\'m buff as heck.</item>
+        <item>I hope you\'re actually completing the workouts you click in workouts menu, hm?</item>
+        <item>Remember, you\'re only hurting yourself because you want to. And because I\'m watching you. Meow ho ho.</item>
     </string-array>
 </resources>
